test/templates/errors/inconsistpage.tmpl
<h1>${:error:code} - Inconsistent Page Cannot Be Shown</h1>

<p> The page you attempted to view can't be shown to you because it
has a consistency problem. Please try again later; the problem may be
fixed then. </p>

<p> Specifically, the version control system thinks that no one is
editing the page, but its idea of what the page should be is different
from the other copy in the page store. This usually happens because
someone edited the page store version by hand without locking it. </p>
<br>
